--- a/simple.html
+++ b/simple.html
@@ -1,3 +1,5 @@
 git is a version control system.
-git helps you track of code change.
+git helps you track of code change
+
 task done by localrabi.
+simple file changed
